examples/inference/edge-demo-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ui-ingress
  namespace: bert-inference
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - bert-remote.connected-cloud.io
      secretName: bert-remote-tls
  rules:
    - host: bert-remote.connected-cloud.io
      http:
        paths:
          - path: /demo(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: demo-ui
                port:
                  number: 80
